Add IEncUnitDescriptor definition

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -352,6 +352,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\enclayoutspell.h" />
     <ClInclude Include="include\encparam.h" />
     <ClInclude Include="include\encparambase.h" />
+    <ClInclude Include="include\encunitdescriptor.h" />
     <ClInclude Include="include\exchangeinterf.h" />
     <ClInclude Include="include\factoryimageanim.h" />
     <ClInclude Include="include\fortcategory.h" />
