--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -450,6 +450,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\midsite.h" />
     <ClInclude Include="include\midstack.h" />
     <ClInclude Include="include\midstacktemplate.h" />
+    <ClInclude Include="include\midsubrace.h" />
     <ClInclude Include="include\midunit.h" />
     <ClInclude Include="include\midunitgroup.h" />
     <ClInclude Include="include\midvillage.h" />
