--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -228,6 +228,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\multilayerimg.cpp" />
     <ClCompile Include="src\musichooks.cpp" />
     <ClCompile Include="src\netmessages.cpp" />
+    <ClCompile Include="src\newracehooks.cpp" />
     <ClCompile Include="src\originalfunctions.cpp" />
     <ClCompile Include="src\pathinfolist.cpp" />
     <ClCompile Include="src\phase.cpp" />
@@ -474,6 +475,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\netdplaysession.h" />
     <ClInclude Include="include\netmessages.h" />
     <ClInclude Include="include\netplayerinfo.h" />
+    <ClInclude Include="include\newracehooks.h" />
     <ClInclude Include="include\ordercat.h" />
     <ClInclude Include="include\originalfunctions.h" />
     <ClInclude Include="include\pathinfolist.h" />
