Support new subrace categories

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -246,6 +246,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\movepathhooks.cpp" />
     <ClCompile Include="src\stringarray.cpp" />
     <ClCompile Include="src\subracecat.cpp" />
+    <ClCompile Include="src\subracehooks.cpp" />
     <ClCompile Include="src\summonhooks.cpp" />
     <ClCompile Include="src\targetslist.cpp" />
     <ClCompile Include="src\terraincat.cpp" />
@@ -506,6 +507,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\stringandid.h" />
     <ClInclude Include="include\stringarray.h" />
     <ClInclude Include="include\subracecat.h" />
+    <ClInclude Include="include\subracehooks.h" />
     <ClInclude Include="include\summonhooks.h" />
     <ClInclude Include="include\targetslist.h" />
     <ClInclude Include="include\taskmanagerholder.h" />
