Add CMenuPhase structure

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -423,6 +423,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\menubase.h" />
     <ClInclude Include="include\menunewskirmish.h" />
     <ClInclude Include="include\menunewskirmishsingle.h" />
+    <ClInclude Include="include\menuphase.h" />
     <ClInclude Include="include\midbag.h" />
     <ClInclude Include="include\midcampaign.h" />
     <ClInclude Include="include\midclient.h" />
