--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1309,6 +1309,9 @@
     <ClInclude Include="include\midserverlogic.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="include\menuphase.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
     <ClInclude Include="include\catalogvalidate.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
