Add SortedCapitalRaceList and its api

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -248,6 +248,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\sitemerchantinterf.cpp" />
     <ClCompile Include="src\smartptr.cpp" />
     <ClCompile Include="src\movepathhooks.cpp" />
+    <ClCompile Include="src\sortedcapitalracelist.cpp" />
     <ClCompile Include="src\sortedracelist.cpp" />
     <ClCompile Include="src\stringarray.cpp" />
     <ClCompile Include="src\subracecat.cpp" />
@@ -512,6 +513,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\sitecategories.h" />
     <ClInclude Include="include\sitemerchantinterf.h" />
     <ClInclude Include="include\smartptr.h" />
+    <ClInclude Include="include\sortedcapitalracelist.h" />
     <ClInclude Include="include\sortedlist.h" />
     <ClInclude Include="include\movepathhooks.h" />
     <ClInclude Include="include\sortedracelist.h" />
