Support new races in Capital.dat

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -169,6 +169,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\buildingtype.cpp" />
     <ClCompile Include="src\button.cpp" />
     <ClCompile Include="src\capitaldata.cpp" />
+    <ClCompile Include="src\capitaldatahooks.cpp" />
     <ClCompile Include="src\capitaldatlist.cpp" />
     <ClCompile Include="src\citystackinterf.cpp" />
     <ClCompile Include="src\currency.cpp" />
@@ -338,6 +339,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\button.h" />
     <ClInclude Include="include\capital.h" />
     <ClInclude Include="include\capitaldata.h" />
+    <ClInclude Include="include\capitaldatahooks.h" />
     <ClInclude Include="include\capitaldatlist.h" />
     <ClInclude Include="include\catalogvalidate.h" />
     <ClInclude Include="include\categories.h" />
